[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
fleetcore = { path = "../fleetcore" }
risc0-zkvm = { version = "2.0.2" }
axum = { version = "0.7.7", features = ["http1", "http2", "ws", "macros"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
tower = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.3.31"
http = "1.1.0"
sha2 = "0.10"
rand = "0.8"
ed25519-dalek = "2.0.0"
